--- a/Config.yml
+++ b/Config.yml
@@ -2,3 +2,4 @@ Settings:
   Prefix: '&7[&bCrazy Runes&7]: '
   Inventory-Name: '&bCrazy Runes'
   Choose-Level: '&3Choose your level'
+  Default-Credits-Amount: 0
